# nv_qt

./: CMakeLists.txt  README.md  Sidebar.qml  main.cpp  main.qml  qml.qrc
